--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 }
 .contenedor{
     margin: auto;
-    width: 450px;
+    width: 550px;
     min-height: 35rem;
     border-radius: 2rem;
     align-content: center;
@@ -53,6 +53,7 @@ table tr{
     background-color: rgba(14, 95, 149, 0.5);
     color: rgb(185, 236, 250);
     border-radius: .8rem;
+    align-content: center;
 }
 th, td {
     padding: 8px;
